@@ -1,3 +1,11 @@
+2007-01-07	kaffeetisch
+
+	* GenPod.pm: Only mark those objects as deprecated that have a
+	non-empty list of replacements; this avoids marking each and every
+	object as deprecated.  Move up the deprecation message in the POD
+	to make it more prominent.  Also, hush the "podifying Foo"
+	messages.
+
 2007-01-06  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* ParseXSDoc.pm:
